fix schema name overflowing in component

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@@ -58,6 +58,8 @@ mat-toolbar {
 
 .schema-name {
   padding-right: 20px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .page-content {
